# kkrpc

./: .gitignore  .gitmodules  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  PLANNING.md  PR_DESCRIPTION.md  README.md  README.zh.md  deno.json  docker-compose.yml  kkrpc-algorithm-summary.md  kkrpc-algorithm-summary.zh.md  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.changeset/: config.json  lifecycle-01-side-effects.md  lifecycle-02-generate-id.md  lifecycle-03-decode-guard.md  lifecycle-04-capability-truthfulness.md  lifecycle-05-callback-gc.md  lifecycle-06-connection-close.md  lifecycle-07-call-options.md  lifecycle-08-hardening.md
.claude/commands/: journal.md
.cursor/rules/: svelte5.mdc
.gemini/: settings.json
.github/workflows/: ci.yml  docs.yml  github-publish.yml  (+2 more)
.husky/: pre-commit
.journal/: 2025-01-27.md  2025-10-25.md  2025-11-02.md  2025-11-04-redis-streams-improvements.md  2025-11-04.md  2026-01-17.md  2026-02-02.md  2026-02-03.md  2026-02-05.md  2026-02-07.md  2026-06-13-0921.md
.kilocode/: mcp.json
.opencode/: design-lab.json
.sisyphus/: boulder.json
docs/: .gitignore  AGENTS.md  README.md  astro.config.mjs  index.md  package.json
examples/: AGENTS.md
interop/: AGENTS.md  README.md
interop/rust/: AGENTS.md  Cargo.toml  README.md
interop/rust/src/: lib.rs  main.rs
interop/rust/tests/: stdio.rs  ws.rs
kkrpc-go/: README.md  go.mod
scripts/: copy-readme.ts  sync-deno-version.mjs
skills/: AGENTS.md
slides/: package.json  slides.md  style.css
(+348 files in other folders)
